style.css
/* Base styles */
body {
    height: 100vh;
    width: 100vw;
    background-color: black;
    margin: 0;
    overflow: hidden;
}

/* Fonts */
.sf-pro-display-font {
    font-family: "SF Pro Display", sans-serif;
    font-stretch: expanded;
}

/* Main section */
main {
    background-image: url("png/FilmPic1.png");
    background-position: center 0%; /* horizontal center */
    background-size: cover;
    height: 100vh;
    width: 100vw;
    position: relative;
    z-index: 2; /* sandwich between nav toggle and nav menu */

    /* Transition for smooth transform */
    transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
}

/* Navigation */

/* nav bar container */
nav {
    height: auto; /* nearly half page */
    width: 100%;
    position: absolute;
    bottom: 3rem;
    z-index: 1; /* bottom layer */
}

.custom-cursor {
    position: fixed;
    display: none;
    width: 30px;
    height: 30px;
    border: 2px solid black;
    background-color: rgba(210, 232, 245, .5);
    border-radius: 50%;
    pointer-events: none;
    z-index: 9999;
}


/* Navigation links container */
#nav-links {
    width: 100%;
    display: inline-flex;
    justify-content: center;
    bottom: 3rem;
    gap: clamp(1rem, 3vw, 4rem); /* gap between elements */

    /* Transform and transition for smooth reveal of navigation links */
    transform: translateY(50%) scale(0.9);
    transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
}

/* Navigation link button */
#nav-links > .nav-link {
    background: none;
    border: none;
    cursor: pointer;
    outline: none;
    text-decoration: none; /* remove underline */
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
}

/* Navigation link label */
#nav-links > .nav-link > .nav-link-label {
    color: white;
    font-size: 1.17rem;
    margin: 0;
    text-transform: lowercase;
    letter-spacing: 3px; /* space between letters */
}

/* Navigation link image */
#nav-links > .nav-link > .nav-link-image {
    width: calc(90vw / 3); /* width of elements */
    aspect-ratio: 1.77 / 1;
    border-radius: 0.7rem;
    margin-top: 0.75rem;
    object-fit: cover; /* keep that thang proportional */
}

/* Navigation toggle button */
#nav-toggle {
    height: 5rem;
    width: 8rem;
    position: fixed;
    z-index: 3; /* sit on top */
    left: 50%; /* center in page */
    bottom: 3rem; /* space to bottom */
    transform: translateX(-50%); /* center in page */
    background-color: rgba(255, 255, 255, .5);
    border: none;
    border-radius: 5rem;
    outline: none;
    box-shadow: 0rem 0rem 4rem rgba(0 0 0 / 37%);
    cursor: pointer;

    /* Transitions for smooth hover and active states */
    transition: transform, background-color; /* trans transform & bg color */
    transition-timing-function: ease;
    transition-duration: 800ms;
}

/* Animate hover and click on menu toggle  */
#nav-toggle:hover {
    transform: translateX(-50%) scale(1.04);
}


/* child element: image in menu toggle */
#nav-toggle > img {
    width: 1.7rem;
    height: auto;
    aspect-ratio: initial;
    position: absolute;
    left: 50%;
    top: 50%; /* center */
    transform: translate(-50%, -50%) scale(0.9);
    opacity: 0; /* default to invisible */

    /* Transition for smooth reveal of icons */
    transition: transform, opacity;
    transition-timing-function: ease;
    transition-duration: 800ms;
}

/* Image track container */
.image-track {
    pointer-events: none;
    display: flex;
    gap: 4vmin;
    position: absolute;
    left: 50%;
    bottom: -100%;
    height: 56vmin;
    transform: translate(0, -50%);
    user-select: none; /* Prevent image highlighting */
    z-index: 4;
    transition: bottom 1100ms cubic-bezier(.83, .3, .38, .97), transform 1100ms cubic-bezier(.83, .3, .38, .97);
}

/* Images inside image track */
.image-track .image {
    width: 40vmin;
    height: 56vmin;
    object-fit: cover;
    object-position: 100% center;
    pointer-events: auto;
}

.image-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4vmin;
    position: relative;
    height: 56vmin;
}

.image-label {
    color: white;
    font-size: 1rem;
    text-decoration: none;
    margin-top: 0.5rem;
}

/* BUTTON CHANGES */

/* Change to open up on hover */
body:not([data-nav="true"]) > #nav-toggle:hover > .openUp {
    opacity: 1;
    transform: translate(-50%, -50%);
}

/* Change to done when nav open*/
body[data-nav="true"] > #nav-toggle > .done {
    opacity: 1;
    transform: translate(-50%, -50%);
}

/* remove done symbol when nav item clicked */
body[data-nav="true"][data-button-clicked="true"] #nav-toggle > .done {
    display: none;
}

/* Change to open down when nav item clicked */
body[data-button-clicked="true"] #nav-toggle > .openDown {
    opacity: 1;
    transform: translate(-50%, -50%);
}

/* remove open down when nav toggle clicked */
body:not([data-nav="true"])[data-button-clicked="true"] #nav-toggle > .openDown {
    display: none;
}

/* Change navigation toggle color when nav toggled */
body[data-nav="true"] > #nav-toggle {
    background-color: rgba(85, 130, 149, .8);
}

/* Change navigation toggle color when nav toggled */
body[data-button-clicked="true"] > #nav-toggle {
    background-color: rgba(255, 255, 255, .8);
}


/* NAV CHANGES */

/* --- Nav Toggled */
/* Background up */
body[data-nav="true"]:not([data-button-clicked="true"]) > main {
    transform: translateY(-33%);
}

/* Nav links up */
body[data-nav="true"]:not([data-button-clicked="true"]) > nav > #nav-links {
    transform: translateY(-50%) scale(1);
}

/* --- Button Clicked */
/* Background up off the page */
body[data-nav="true"][data-button-clicked="true"] > main {
    transform: translateY(-100vh) scale(1);
    transition: transform 800ms ease-out;
}

/* Nav links up off the page*/
body[data-nav="true"][data-button-clicked="true"] > nav > #nav-links {
    transform: translateY(-100vh) scale(1);
    transition: transform 800ms ease-out;

}

/* Nav toggle up to top of page */
body[data-nav="true"][data-button-clicked="true"] > #nav-toggle {
    transform: translateX(-50%) translateY(-90vh) scale(1);
    transition: transform 1100ms cubic-bezier(.83, .3, .38, .97);
}

/* Show the image track when a button is clicked */
body[data-button-clicked="true"] > .image-track {
    bottom: 0%;
    transform: translateY(-50%);
}


/* --- Nav Toggled Again*/

/* Nav links down */
body:not([data-nav="true"])[data-button-clicked="true"] > #nav-toggle {
    transform: translateX(-50%) translateY(-71vh) scale(1);
    transition: transform 900ms cubic-bezier(.13, .53, .38, .97);
}

body:not([data-nav="true"])[data-button-clicked="true"] > main {
    transform: translateY(-100vh) scale(1);
    transition: transform 800ms cubic-bezier(.83, .3, .38, .97);
}

body:not([data-nav="true"])[data-button-clicked="true"] > nav > #nav-links {
    transform: translateY(-78vh) scale(1);
    transition: transform 800ms cubic-bezier(.83, .3, .38, .97);
}

